fixing graal docker image